...
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
  "account_details_filter_tags_sortBy": "Sort by",
...
  "account_empty_tx_history_text_explainer": "There are no transactions in this account.\nReceive your first transaction below.",
  "account_type_label_taproot": "Taproot",
  "account_type_sublabel_testnet": "Testnet",
  "accounts_empty_text_explainer": "Create a mobile wallet with Magic Backups.",
  "accounts_empty_text_learn_more": "Get Started",
  "accounts_forceUpdate_cta": "Update Envoy",
  "accounts_forceUpdate_heading": "Envoy Update Required",
...
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
...
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
...
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
  "component_notificationText": "Issue establishing Tor connectivity",
...
  "device_deviceDetailsPrimeRemoved_completeAccessorySetup": "Complete Accessory Set Up",
  "device_deviceDetailsPrimeRemoved_pairPassportAgain": "Pair Passport Again",
  "device_deviceDetailsPrimeRemoved_reconnectPassport": "Reconnect Passport",
  "device_deviceDetailsPrime_connected": "Connected",
  "device_deviceDetailsPrime_connection": "Connection",
...
  "devices_connectionFailedModal_content": "Envoy could not connect to Passport Prime. Make sure your Passport Prime is powered on, Bluetooth is enabled, and it is not already connected to another device.",
  "devices_connectionFailedModal_header": "Connection Failed",
  "devices_empty_modal_video_cta1": "Buy Passport",
  "devices_empty_modal_video_cta2": "Watch Later",
  "devices_empty_text_explainer": "Secure your Bitcoin with Passport.",
...
  "devices_reconnecting_header": "Reconnecting",
  "empty_tag_modal_subheading": "Your {tagName} tag is now empty. Would you like to delete it?",
  "envoy_account_tos_cta": "I Accept",
  "envoy_account_tos_heading": "Please review and accept the Passport Terms of Use",
  "envoy_cameraPermissionRequest": "Envoy requires camera access to scan QR codes. Please go to settings and grant camera permissions.",
...
  "envoy_scv_intro_heading": "First, let’s make sure your Passport is secure",
  "envoy_scv_intro_subheading": "This security check will ensure your Passport has not been tampered with during shipping.",
  "envoy_scv_result_fail_cta1": "Contact Us",
  "envoy_scv_result_fail_heading": "Your Passport may be insecure",
  "envoy_scv_result_fail_subheading": "Envoy could not validate the security of your Passport. Please contact us for assistance.",
...
  "envoy_support_email": "Email",
  "envoy_support_telegram": "Telegram",
  "envoy_welcome_screen_cta1": "Enable Magic Backups",
  "envoy_welcome_screen_cta2": "Manually Configure Seed Words",
  "envoy_welcome_screen_heading": "Create New Wallet",
...
  "magic_setup_tutorial_android_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically backs up your wallet and settings with Android Auto Backup, 100% end-to-end encrypted. \n\n[[Learn more]].",
  "magic_setup_tutorial_heading": "Magic Backups",
  "magic_setup_tutorial_ios_CTA1": "Create Magic Backup",
  "magic_setup_tutorial_ios_CTA2": "Recover Magic Backup",
  "magic_setup_tutorial_ios_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically back up your wallet and settings with iCloud Keychain, 100% end-to-end encrypted. \n\n[[Learn more]].",
...
  "tagged_tagDetails_sheet_transferSelected": "Transfer Selected",
  "tap_and_drag_first_time_text": "Hold to drag and reorder your accounts.",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
  "taproot_passport_dialog_reconnect": "Reconnect Passport",
  "taproot_passport_dialog_subheading": "To enable a Passport Taproot account, ensure you are running firmware 2.3.0 or later and reconnect your Passport.",
...
  "wallet_setup_success_heading": "Your Wallet Is Ready",
  "wallet_setup_success_subheading": "Envoy is set up and ready for your Bitcoin!",
  "welcome_screen_ctA1": "Set Up Envoy Wallet",
  "welcome_screen_cta2": "Manage Passport",
  "welcome_screen_heading": "Welcome to Envoy"
...
